--- a/config/database.yml
+++ b/config/database.yml
@@ -22,6 +22,5 @@ test:
 
 production:
   <<: *default
-  host: <%= ENV['DATABASE_URL'] %>
   adapter: postgresql
-  database: stuff
+  database: db/stuff
