--- a/config/database.yml
+++ b/config/database.yml
@@ -20,7 +20,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: db/stuff_test
 
 production:
   <<: *default
