--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -7,18 +7,54 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
+    services:
+      db:
+        image: postgres
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: 12345
+          POSTGRES_DB: db
+        ports: ['5432:5432']
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+      redis:
+        image: redis
+        ports: ['6379:6379']
+        options: --entrypoint redis-server
+
+    strategy:
+      fail-fast: false
+      matrix:
+        ci_node_total: [2]
+        ci_node_index: [0, 1]
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby 2.7.0
-      uses: actions/setup-ruby@v1
-      with:
-        ruby-version: 2.7.0
-    - name: Build and test with Rake
-      run: |
-        gem install bundler
-        bundle install --jobs 4 --retry 3
-        bundle exec rake
+      - uses: actions/checkout@v2
+      - name: Setup Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.7.0
+      - uses: borales/actions-yarn@v2.0.0
+        with:
+          cmd: install
+      - name: Install pg client
+        run: sudo apt-get install libpq-dev
+      - name: Run tests
+        env:
+          DATABASE_URL: postgres://postgres:@localhost:5432/test
+          REDIS_URL: redis://localhost:6379/0
+          RAILS_ENV: test
+          RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
+          KNAPSACK_PRO_TEST_SUITE_TOKEN_MINITEST: ${{ secrets.KNAPSACK_MINITEST }} 
+          KNAPSACK_PRO_CI_NODE_TOTAL: ${{ matrix.ci_node_total  }}
+          KNAPSACK_PRO_CI_NODE_INDEX: ${{ matrix.ci_node_index  }}
+        run: |
+          gem install bundler
+          bundle install --jobs 4 --retry 3
+          bundle exec rails db:prepare
+          bundle exec rake knapsack_pro:minitest
