[FIX] database configuration for testing container

--- a/config/database.yml
+++ b/config/database.yml
@@ -20,6 +20,8 @@ development:
 test:
   <<: *default
   adapter: postgresql
+  user: postgres
+  password: 12345
   database: db/stuff_test
 
 production:
