--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -62,6 +62,7 @@ jobs:
         bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
         bin/rails db:setup
+        bundle exec rails webpacker:compile
     - name: Run tests
       env:
         PGHOST: localhost
