--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -59,21 +59,19 @@ jobs:
         RAILS_ENV: test
       run: |
         gem install bundler
-        bundle config path vendor/bundle
         bundle install --jobs 4 --retry 3
         bin/rails db:setup
         bundle exec rails webpacker:compile
+
     - name: Run tests
       env:
         PGHOST: localhost
         PGUSER: postgres
+        PGPASSWORD: 12345
         PGPORT: ${{ job.services.postgres.ports[5432] }}
         RAILS_ENV: test
         KNAPSACK_PRO_TEST_SUITE_TOKEN_MINITEST: ${{ secrets.KNAPSACK_PRO_TEST_SUITE_TOKEN_MINITEST }}
         KNAPSACK_PRO_CI_NODE_TOTAL: ${{ matrix.ci_node_total }}
         KNAPSACK_PRO_CI_NODE_INDEX: ${{ matrix.ci_node_index }}
       run: |
-        gem install bundler
-        bundle install --jobs 4 --retry 3
-        bundle exec rails db:prepare
         bundle exec rake knapsack_pro:minitest
