--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -61,6 +61,7 @@ jobs:
         gem install bundler
         bundle install --jobs 4 --retry 3
         bin/rails db:setup
+        yarn install --check-files
         bundle exec rails webpacker:compile
 
     - name: Run tests
