--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -63,7 +63,7 @@ jobs:
         bin/rails db:drop
         bin/rails db:create
         bin/rails db:schema:load
-        bin/rails db:schema:migrate
+        bin/rails db:migrate
         bin/rails db:seed
         yarn install --check-files
         bundle exec rails webpacker:compile
