--- a/.github/workflows/ruby.yml
+++ b/.github/workflows/ruby.yml
@@ -60,10 +60,7 @@ jobs:
       run: |
         gem install bundler
         bundle install --jobs 4 --retry 3
-        bin/rails db:drop
-        bin/rails db:create
-        bin/rails db:schema:load
-        bin/rails db:migrate
+        bin/rails db:migrate:reset
         bin/rails db:seed
         yarn install --check-files
         bundle exec rails webpacker:compile
